# swagger.yaml
@@ -527,6 +527,68 @@ paths:
                 success: false
                 error: "Errore, credenziali errate"
 
+  /utente/profile/changepassword:
+    put:
+      summary: Modifica password dell'utente
+      security:
+        - jwtCookie: []
+      requestBody:
+        description: Nuova password dell'utente
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RichiestaCambioPassword"
+            example:
+              vecchiaPassword: "password1234"
+              nuovaPassword: "newpassword1234"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  succes: 
+                    type: boolean
+                  message: 
+                    type: string
+                  data: 
+                    type: object
+                    properties:
+                      user: 
+                        type: object
+                        properties:
+                          id: 
+                            type: string
+                          password: 
+                            type: string
+                          nuovapassword:
+                            type: string
+              example:
+                success: true
+                message: "Password modificata con successo"
+
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrResponse"
+              example:
+                success: false
+                error: "Richiesta non valida"
+        
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrResponse"
+              example:
+                success: false
+                error: "Unauthorized - Accedi"
+
 components:
   schemas:
     Piatto:
@@ -616,6 +678,19 @@ components:
             type: boolean
         error:
             type: string
+
+    RichiestaCambioPassword:
+      type: object
+      properties:
+        vecchiaPassword:
+          type: string
+          description: Vecchia password dell'utente
+        nuovaPassword:
+          type: string
+          description: Nuova password dell'utente
+      required:
+        - vecchiaPassword
+        - nuovaPassword
             
   securitySchemes:
     jwtCookie:         
